css/loginPopUp.css
*{
    box-sizing: border-box;
    margin: 0;

    /* padding: 0; */
}

body{
    display: grid;
    place-items: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    height: 100vh;
}

h1{
    font-weight: bold;
    margin: 0;
}

p{
    font-size: 1em;
    font-weight: 100;
    line-height: 1.3em;
    letter-spacing: .1em;
    margin: 20px 0;
}

span{
    font-size: 12px;

}

form{
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 50px;
    height: 100%;
    text-align: center;

}
input{
    background-color: #eee;
    border: none;
    padding: 10px 12px;
    font-size: 16px;
    margin: 8px 0;
    width: 100%;
}
a{
    color: #333;
    font-size: 14px;
    text-decoration: none;
    margin: 15px 0;

}
button{
    border-radius: 2em;
    border: 1px solid white;
    background: #21a9d3;
    font-size: 12px;
    font-weight: bold;
    padding: 1em 5em;
    text-transform: uppercase;
    transition: transform 80ms ease-in;
    cursor: pointer;

}
button.ghost{
    background-color: transparent;
    border-color: white;
}
.container{
    background-color: #fff;
    border-radius: 2em;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 
    0 10px 10px rgba(0, 0, 0, 0.22);
    position: relative;
    overflow: hidden;
    width: 650px;
    max-width: 100%;
    min-height: 550px;

}
button:active{
    transform: scale(0.95);
}

button:focus{
    outline: none;
}
.form-container{
    position: absolute;
    top: 0;
    height: 100%;
    transition: all 0.6s ease-in-out;
}
.sign-in-container{
    left: 0;
    width: 50%;
    z-index: 2;
}
.sign-up-container{
    left: 0;
    width: 50%;
    opacity: 0;
    z-index: 1;
}

.container.right-panel-active .sign-in-container{
    transform: translateX(100%);

}

.container.right-panel-active .sign-up-container{
    transform: translateX(100%);
    opacity: 1;
    z-index: 1;
    animation: show 0.6s;
}


@keyframes show {
    0%, 49.99%{
        opacity: 0;
        z-index: 1;
    }
    50%, 100%{
        opacity: 1;
        z-index: 5;
    }

}

.container.right-panel-active .overlay{
    transform: translateX(50%);
}

.container.right-panel-active .overlay-left{
    transform: translateX(0);
}

.container.right-panel-active .overlay-right{
    transform: translateX(20%);
}
.overlay-container{
    position: absolute;
    top: 0;
    left: 50%;
    width: 50%;
    height: 100%;
    overflow: hidden;
    transition: transform 0.6s ease-in-out;
    z-index: 100;
}

.overlay{
    background: #168aad;
    background: -webkit-linear-gradient(20deg, #34a0a4);
    background: linear-gradient(0deg, #34a0a4, #168aad);
    background-repeat: no-repeat;
    color: white;
    position: relative;
    left: -100%;
    height: 100%;
    width: 200%;
    transform: translateX(0);
    transition: transform 0.6s ease-in-out;

}

.overlay-pannel{
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 40px;
    text-align: center;
    top: 0;
    height: 100%;
    width: 50%;
    transform: translateX(0);
    transition: transform 0.6s ease-in-out;

}


.overlay-left{
    transform: translateX(-20%);

}

.overlay-right{
    right: 0;
    transform: translateX(0);

}

.social-container{
    margin: 20px 0 ;
    
}

.social-container a{
    border: 1px solid #DDD;
    border-radius: 50%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin: 0 5px;
    height: 40px;
    width: 40px;

}

.typewriter h1, .typewriter p {
    overflow: hidden; /* Ensures the content is not revealed until the animation */
    border-right: .15em solid orange; /* The typwriter cursor */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    letter-spacing: .15em; /* Adjust as needed */
    animation: 
      typing 3.5s steps(40, end),
      blink-caret .75s step-end infinite;
  }
  
  /* The typing effect */
  @keyframes typing {
    from { width: 0 }
    to { width: 100% }
  }
  
  /* The typewriter cursor effect */
  @keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: orange; }
  }

  dialog{
    border: none;
    width: 100%;
    height: 100vh;
  }

